2016/12/09
    `System.__NoAutoSet__` attribute is added, used to block the assignment to the object directly.

2016/12/04
    Rename `__ObjectMethodAttributeEnabled__` to `__ObjMethodAttr__` for simple using.

2016/12/01
    The attribute has *Priority* and *SubLevel* property now, they are used to decided the order of the attribute's applied process.

    Many methods removed from the *System.Reflector*, since they can be replaced by attribute's methods.

2016/11/24
    Re-design the property system, disable the PLOOP_SAVE_MEMORY(default disabled) mode will speed up the property's access by 10%-30%.

2016/11/21
    System.RawBoolean is added, only accept true/false, used for `__Arguments__`.

2016/11/10
    The attribute system support new type - System.AttributeTargets.ObjectMethod, it's used to bind info or modify the object's method(the object method is assigned to the object directly), works like :

        __ObjectMethodAttributeEnabled__{ Inheritable = true }
        class "A" {
            Name = { Type = System.String, Default = "Anonymous", Event = "OnNameChanged" }
        }

        o = A()

        __Delegate__(System.Threading.ThreadCall)
        function o:DoThreadTask(...)
        end

        __Delegate__(System.Threading.ThreadCall)
        o.OnNameChanged = o.OnNameChanged + function(self, new) end

    Only object whose class is marked with `__ObjectMethodAttributeEnabled__` attribute can use this feature.

2016/11/09
    The struct system is re-designed, the validator can be only used to validate the value, not to change it, if the struct would modify the value, it should be done in `__init` method like :

        struct "Boolean" {
            -- No check for boolean
            Boolean = function (value) end;

            -- Change the value
            __init = function (value) return value and true or false end;
        }
